@@ -3,6 +3,7 @@ database structure we're incrementing number after first decimal (i.e 1.1, 1.2).
 
 Version 1.4
 - Added possibility to set Confirmation page summary text
+- Added Cancel button on Edit page
 
 Version 1.3.2
 - Fixed sending of empty email by hitting F5 on receipt page
